# reaction-time-test

./: Cargo.toml  index.html  reaction-speed-3e91fc336a2a2d5e.js  reaction-speed-3e91fc336a2a2d5e_bg.wasm  reaction-speed-80f3985acde4ee31.js  reaction-speed-80f3985acde4ee31_bg.wasm  reaction-speed-b1d05c0e942b087c.js  reaction-speed-b1d05c0e942b087c_bg.wasm  reaction-speed-cf99724e2c5105c7.js  reaction-speed-cf99724e2c5105c7_bg.wasm  style-4bf58ecb407f4f5a.css  style-6ce28e84168abcdd.css  style.scss
src/: home_page.rs  lib.rs  main.rs  not_found_page.rs  settings_page.rs
