[package]
name = "reaction-speed"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.2"
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
chrono = "0.4.24"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys ="0.3"
