[package]
name = "reaction-speed"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = "0.2"
leptos_router = { version = "0.2", features = ["csr"] }
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
chrono = "0.4.24"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.61", features = ["Storage"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
